syntax = "proto3";

package Trade;

service TradeService { 
  rpc swap (SwapRequest) returns (SwapResponse);
}

message SwapRequest {
  string user_id = 1;
  uint32 chain_id = 2;
  string exchange = 3;
  string token0 = 4;
  string token1 = 5;
  float amount = 6;
  float slippage = 7;
  uint32 deadline = 8;
}

message SwapResponse {
  string hash = 1;
}
